# 8051-Simulator

./: LICENSE  README.rst  gunicorn.conf.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  wsgi.py
.github/workflows/: build.yml
api/: index.py
api/static/: script.js
api/templates/: render_memory.html  render_registers_flags.html
core/: basic_memory.py  controller.py  exceptions.py  flags.py  instruction_set.py  memory.py  opcodes.py  operations.py  util.py
tests/: test_util.py
webapp/: app.py
webapp/static/: styles.css
webapp/templates/: base.html  index.html  render_assembler.html  render_memory.html  render_registers_flags.html
