[metadata]
name = 8051 Simulator
license = MIT
author = devanshshukla99
author_email = devanshshukla99@outlook.com
description = 8051 microprocessor simulator
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6
    rich

[options.packages.find]
exclude =
    tests

[tool:pytest]
testpaths = "tests"

[flake8]
ignore = E203
max-line-length = 120

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
length_sort = False
length_sort_sections=stdlib
line_length = 120
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
